<resources>
    <string name="app_name">Adaptive Maket</string>
    <string name="splash_text">Lorem Ipsum is simply dummy text</string>
    <string name="product_of">Product of</string>
    <string name="developer">Dmitry Sergeev</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="email">Enter Email / Phone Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember">Remember Password</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="not_account">Don\'t have a account? Let\'s</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="conditions">I agree with terms &amp; conditions</string>
    <string name="already_register">Already Registered? Let\'s</string>
    <string name="congrats">Congrats</string>
    <string name="created">Account Created\nSuccessfully</string>
    <string name="start">Get Started</string>
</resources>