<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvHeader"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textSize="35dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/llLogin"
        app:layout_constraintTop_toBottomOf="@id/tvHeader">

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/full_name" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/etFullName"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/etEmail"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/etPassword"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/confirm_password" />

        <LinearLayout
            android:id="@+id/llRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etConfirmPassword"
            android:layout_marginBottom="20dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/check_box_background" />

            <TextView
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditions" />

        </LinearLayout>

        <android.widget.Button
            android:id="@+id/btnRegister"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llRemember"
            android:layout_marginVertical="5dp"
            android:text="@string/register"

            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOr"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="15dp"
            android:text="@string/or" />

        <LinearLayout
            android:id="@+id/llAnother"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvOr">

            <android.widget.Button
                android:id="@+id/btnGoogle"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/google"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@id/tvOr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llRemember" />

            <android.widget.Button
                android:id="@+id/btnFacebook"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/facebook"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@id/tvOr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llRemember" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvNotAccount"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15px"
            android:text="@string/already_register" />

        <TextView
            android:id="@+id/tvReg"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>